package SistemaAcademico.classes;

public enum SituacaoAlunoEnum {
    APROVADO,
    REPROVADO,
    MATRICULADO,
}
